--- a/암호의 세계/7_해시 함수.md
+++ b/암호의 세계/7_해시 함수.md
@@ -3,3 +3,9 @@
 어떤 입력에 대해서도 항상 일정한 길이의 값을 반환하는 함수를 해시 함수라고 한다.
 해시 함수에서는 비둘기집의 원리 같이 키가 충돌되는 문제, 역추적 등의 문제가 존재한다.
 위의 두 가지 문제를 잘 해결할 수록 좋은 해시 함수이다.
+
+
+**해시 함수의 사용**
+- 데이터가 매우 커 일부 손상이 일어나더라도 알 수 없는 경우 해시 함수를 사용하기도 한다. 같다면 변경이 일어나지 않은 것이라고 추측할 수 있다.
+- 비교나 확인을 할 때, 위험하게 원본 데이터를 사용하고 싶지 않은 경우 역시 사용한다.
+- 단순하게 대표성을 띄고 싶을 때 역시 사용한다. (깃 커밋과 같이)
